# assignment_test

./: .gitignore  LICENSE  Makefile  pyproject.toml  pytest.ini
python/: rdf_store.py  schema.ttl
python/tests/: test_gilded_rose.py  test_rdf_store.py
solution/: Makefile  README.md  pytest.ini
solution/python/: README.md  gilded_rose.py  rdf_store.py
solution/python/tests/: test_gilded_rose.py  test_rdf_store.py
